# PlottingOnGenome

./: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  Pipfile  README.md  gui.py  pyinstaller_entry.py  pyproject.toml  requirements.txt  setup.py  streamlit_app.py  tox.ini
app/: app.py  page1.py  page2.py  plotting.py
examples/: example.fasta
plotting_on_genome/: __init__.py  __main__.py  annotate_sequences.py  cli.py  get_genome.py  gui.py  main.py  plotting.py  run_blast.py
src/maphelios/: __init__.py  cli.py  comparison.py  genome_funcs.py  helper.py  mapping.py  pacbio.py
src/plotting_on_genome/: __init__.py  cli.py  comparison.py  genome_funcs.py  gui.py  helper.py  insert.py  inserts_dict.py  main.py  mapping.py  plotting.py
