[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plotting_on_genome"
version = "0.4.6"
requires-python = ">=3.6"
description = "Package for making genome related plots"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{ name = "Bartosz Bartmanski", email = "bartosz.bartmanski@embl.de" }]

dependencies = [
    "biopython",
    "bcbio-gff",
    "dna_features_viewer",
    "matplotlib",
    "pandas",
    "platformdirs",
]

[project.optional-dependencies]
streamlit = ["streamlit", "seaborn"]

[project.scripts]
pog = "plotting_on_genome.__main__:main"

[project.urls]
"Homepage" = "https://git.embl.de/grp-zimmermann-kogadeeva/PlottingOnGenome"
"Bug tracker" = "https://git.embl.de/grp-zimmermann-kogadeeva/PlottingOnGenome/issues/"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.bumpver]
current_version = "0.4.6"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/plotting_on_genome/__init__.py" = ['^__version__ = "{version}"$']

[dependency-groups]
dev = [
    "ipympl>=0.8.8",
    "jupyterlab>=2.3.2",
]
