[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maphelios"
version = "0.8.5"
requires-python = ">=3.9"
description = "Package for making genome related plots"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Bartosz Bartmanski", email = "bartosz.bartmanski@embl.de" },
    { name = "Katarina Erbstein", email = "katarina.erbstein@embl.de" }
]

dependencies = [
    "biopython",
    "bcbio-gff",
    "dna_features_viewer",
    "matplotlib",
    "pandas",
    "platformdirs",
    "pysam>=0.23.0",
    "pycirclize>=1.9.1",
    "scipy>=1.13.1",
]

[project.optional-dependencies]
streamlit = ["streamlit", "seaborn"]

[project.urls]
"Homepage" = "https://git.embl.de/grp-zimmermann-kogadeeva/Maphelios"
"Bug tracker" = "https://git.embl.de/grp-zimmermann-kogadeeva/Maphelios/issues/"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.bumpver]
current_version = "0.8.5"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/maphelios/__init__.py" = ['^__version__ = "{version}"$']

[dependency-groups]
dev = [
    "ipympl>=0.8.8",
    "jupyterlab>=2.3.2",
]
